Rebased to Chaos Calmer (15.05)
Signed-off-by: Kevin Mahoney <kevin.mahoney@zenotec.net>

--- a/package/network/services/hostapd/files/hostapd-full.config
+++ b/package/network/services/hostapd/files/hostapd-full.config
@@ -53,6 +53,9 @@ CONFIG_PEERKEY=y
 # Integrated EAP server
 CONFIG_EAP=y
 
+# EAP-FAST for the integrated EAP server
+CONFIG_EAP_FAST=y
+
 # EAP-MD5 for the integrated EAP server
 CONFIG_EAP_MD5=y
 
@@ -164,3 +167,5 @@ CONFIG_WPS=y
 CONFIG_FULL_DYNAMIC_VLAN=y
 
 CONFIG_UBUS=y
+
+CONFIG_CTRL_IFACE_MIB=y
