Modified configuration for new TPLink Archer C5
Signed-off-by: Kevin Mahoney <kevin.mahoney@zenotec.net>

--- a/ap2ap-debug.config
+++ b/ap2ap-debug.config
@@ -9,15 +9,21 @@ CONFIG_BUSYBOX_CUSTOM=y
 # CONFIG_FEED_telephony is not set
 # CONFIG_PACKAGE_ath10k-firmware-qca988x is not set
 CONFIG_PACKAGE_dmesg=y
+CONFIG_PACKAGE_gdb=y
+CONFIG_PACKAGE_gdbserver=y
 CONFIG_PACKAGE_hostapd=y
 CONFIG_PACKAGE_hostapd-utils=y
 # CONFIG_PACKAGE_kmod-ath10k is not set
 CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_libiwinfo-lua=y
 CONFIG_PACKAGE_liblua=y
+CONFIG_PACKAGE_libncurses=y
+CONFIG_PACKAGE_libpcap=y
 CONFIG_PACKAGE_libpolarssl=y
 CONFIG_PACKAGE_libpthread=y
+CONFIG_PACKAGE_libreadline=y
 CONFIG_PACKAGE_librt=y
+CONFIG_PACKAGE_libthread-db=y
 CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_libuci-lua=y
 CONFIG_PACKAGE_libusb-1.0=y
@@ -26,9 +32,12 @@ CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_px5g=y
 CONFIG_PACKAGE_rpcd=y
 CONFIG_PACKAGE_strace=y
+CONFIG_PACKAGE_tcpdump=y
+CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_uboot-ar71xx-nbg460n_550n_550nh=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_usbutils=y
+CONFIG_PACKAGE_valgrind=y
 # CONFIG_PACKAGE_wpad-mini is not set
 CONFIG_PACKAGE_zlib=y
