--- a/ap2ap.config
+++ b/ap2ap.config
@@ -7,6 +7,7 @@ CONFIG_BUSYBOX_CUSTOM=y
 # CONFIG_FEED_packages is not set
 # CONFIG_FEED_routing is not set
 # CONFIG_FEED_telephony is not set
+CONFIG_MAKE_TOOLCHAIN=y
 # CONFIG_PACKAGE_ath10k-firmware-qca988x is not set
 CONFIG_PACKAGE_dmesg=y
 CONFIG_PACKAGE_hostapd=y
@@ -23,12 +24,21 @@ CONFIG_PACKAGE_libuci-lua=y
 CONFIG_PACKAGE_libusb-1.0=y
 CONFIG_PACKAGE_libustream-polarssl=y
 CONFIG_PACKAGE_lua=y
+CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-app-firewall=y
+CONFIG_PACKAGE_luci-base=y
+CONFIG_PACKAGE_luci-lib-ip=y
+CONFIG_PACKAGE_luci-lib-nixio=y
+CONFIG_PACKAGE_luci-mod-admin-full=y
+CONFIG_PACKAGE_luci-proto-ipv6=y
+CONFIG_PACKAGE_luci-proto-ppp=y
+CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_px5g=y
 CONFIG_PACKAGE_rpcd=y
-CONFIG_PACKAGE_strace=y
 CONFIG_PACKAGE_uboot-ar71xx-nbg460n_550n_550nh=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_usbutils=y
 # CONFIG_PACKAGE_wpad-mini is not set
 CONFIG_PACKAGE_zlib=y
+CONFIG_SDK=y
