--- a/ap2ap.config
+++ b/ap2ap.config
@@ -1,22 +1,19 @@
 CONFIG_TARGET_ar71xx=y
 CONFIG_TARGET_ar71xx_generic=y
-CONFIG_TARGET_ar71xx_generic_TLWDR4300=y
+CONFIG_TARGET_ar71xx_generic_ARCHERC7=y
 CONFIG_BUSYBOX_CUSTOM=y
-# CONFIG_FEED_luci is not set
 # CONFIG_FEED_management is not set
-# CONFIG_FEED_packages is not set
 # CONFIG_FEED_routing is not set
-# CONFIG_FEED_targets is not set
 # CONFIG_FEED_telephony is not set
+CONFIG_MAKE_TOOLCHAIN=y
+# CONFIG_PACKAGE_ath10k-firmware-qca988x is not set
 CONFIG_PACKAGE_dmesg=y
-CONFIG_PACKAGE_file=y
 CONFIG_PACKAGE_hostapd=y
 CONFIG_PACKAGE_hostapd-utils=y
+# CONFIG_PACKAGE_kmod-ath10k is not set
 CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_libiwinfo-lua=y
-CONFIG_PACKAGE_libkmod=y
 CONFIG_PACKAGE_liblua=y
-CONFIG_PACKAGE_libmagic=y
 CONFIG_PACKAGE_libpolarssl=y
 CONFIG_PACKAGE_libpthread=y
 CONFIG_PACKAGE_librt=y
@@ -36,13 +33,12 @@ CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-ssl=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
-CONFIG_PACKAGE_pciutils=y
 CONFIG_PACKAGE_px5g=y
 CONFIG_PACKAGE_rpcd=y
-CONFIG_PACKAGE_strace=y
 CONFIG_PACKAGE_uboot-ar71xx-nbg460n_550n_550nh=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_usbutils=y
 # CONFIG_PACKAGE_wpad-mini is not set
 CONFIG_PACKAGE_zlib=y
+CONFIG_SDK=y
