--- a/ap2ap.config
+++ b/ap2ap.config
@@ -6,20 +6,22 @@ CONFIG_BUSYBOX_CUSTOM=y
 # CONFIG_FEED_routing is not set
 # CONFIG_FEED_telephony is not set
 CONFIG_MAKE_TOOLCHAIN=y
-# CONFIG_PACKAGE_ath10k-firmware-qca988x is not set
+CONFIG_OPENSSL_WITH_EC=y
 CONFIG_PACKAGE_dmesg=y
 CONFIG_PACKAGE_hostapd=y
 CONFIG_PACKAGE_hostapd-utils=y
-# CONFIG_PACKAGE_kmod-ath10k is not set
 CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_libiwinfo-lua=y
 CONFIG_PACKAGE_liblua=y
+CONFIG_PACKAGE_libmbedtls=y
+CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_libpolarssl=y
 CONFIG_PACKAGE_libpthread=y
 CONFIG_PACKAGE_librt=y
 CONFIG_PACKAGE_libubus-lua=y
 CONFIG_PACKAGE_libuci-lua=y
 CONFIG_PACKAGE_libusb-1.0=y
+CONFIG_PACKAGE_libustream-mbedtls=y
 CONFIG_PACKAGE_libustream-polarssl=y
 CONFIG_PACKAGE_lua=y
 CONFIG_PACKAGE_luci=y
@@ -42,3 +44,4 @@ CONFIG_PACKAGE_usbutils=y
 # CONFIG_PACKAGE_wpad-mini is not set
 CONFIG_PACKAGE_zlib=y
 CONFIG_SDK=y
+CONFIG_WPA_HOSTAPD_OPENSSL=y
