--- a/ap2ap.config
+++ b/ap2ap.config
@@ -2,6 +2,8 @@ CONFIG_TARGET_ar71xx=y
 CONFIG_TARGET_ar71xx_generic=y
 CONFIG_TARGET_ar71xx_generic_ARCHERC7=y
 CONFIG_BUSYBOX_CUSTOM=y
+CONFIG_BUSYBOX_CONFIG_LSPCI=y
+CONFIG_BUSYBOX_CONFIG_LSUSB=y
 # CONFIG_FEED_management is not set
 # CONFIG_FEED_routing is not set
 # CONFIG_FEED_telephony is not set
